# KeepActive

./: CI_CD_DOCS.md  Cargo.toml  KeepActive.c  Makefile  README.md  app.manifest  validate-cicd.sh
.github/workflows/: build-and-release.yml  build.yml
src/: main.rs
